--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
 <h1>Welcome to Dennis Chipman - 2021532097 Website</h1>
+  <h2>Group Partner Kasangula Kasonde 2021391914</h2>
 <nav>
 <a href="#">Home</a> |
 <a href="#">About</a> |
